--- a/package.json
+++ b/package.json
@@ -36,9 +36,9 @@
     "eslint-plugin-jest": "^24.0.2",
     "eslint-plugin-tsdoc": "^0.2.7",
     "eslint-plugin-unused-imports": "^0.1.3",
-    "pre-commit": "^1.2.2",
     "manual-git-changelog": "^1.0.0",
-    "typescript": "^4.0.2"
+    "pre-commit": "^1.2.2",
+    "typescript": "^4.1.3"
   },
   "scripts": {
     "lint": "eslint . --ext .ts --cache",
@@ -48,9 +48,15 @@
     "prepare": "npm run build"
   },
   "dependencies": {
+    "@types/jsdom": "^16.2.6",
     "@types/minimist": "^1.2.1",
     "@types/node": "^14.14.22",
+    "@types/puppeteer": "^5.4.2",
+    "@types/user-agents": "^1.0.0",
     "cross-fetch": "^3.0.6",
-    "minimist": "^1.2.5"
+    "jsdom": "^16.4.0",
+    "minimist": "^1.2.5",
+    "puppeteer": "^5.5.0",
+    "user-agents": "^1.0.559"
   }
 }
